appId: com.example.nativeLiquidGlassFlutterExample
---
- waitForAnimationToEnd:
    timeout: 800
- tapOn:
    point: 80%,68%
- waitForAnimationToEnd:
    timeout: 800
- tapOn:
    point: 20%,68%
- waitForAnimationToEnd:
    timeout: 800
- tapOn:
    point: 83%,82%
- waitForAnimationToEnd:
    timeout: 800
- tapOn:
    point: 67%,82%
- waitForAnimationToEnd:
    timeout: 800
